--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
     <footer>
       This project was coded with 💜 by Eva Sousa and is
-      <a href="#" target="_blank"> open sourced on GitHub</a>
+      <a
+        href="https://github.com/evasousa23/Project-world-clock"
+        target="_blank"
+      >
+        open sourced on GitHub</a
+      >
     </footer>
 
     <script src="javascript/index.js"></script>
