add the basic html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="container">
     <h1>World Clock</h1>
 
+    <select name="" id="">
+        <option value="">Select a city</option>
+        <option value=""></option>
+        <option value="">Brzil</option>
+        <option value=""></option>
+    </select>
+
+    <div class="city">
+        <h2>Lisbon</h2>
+        <div class="date"> 23 august 2023</div>
+        <div class="time"> 1:01:11</div>
+    </div>
+        <div class="city">
+        <h2>Lisbon</h2>
+        <div class="date"> 23 august 2023</div>
+        <div class="time"> 1:01:11</div>
+    </div>
+</div>
     <footer>
       This project was coded with 💜 by Eva Sousa and is
       <a
