style the project with css

--- a/index.html
+++ b/index.html
@@ -4,31 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>World Clock</title>
-
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
-    <h1>World Clock</h1>
+      <h1>World Clock</h1>
 
-    <select name="" id="">
-        <option value="">Select a city</option>
-        <option value=""></option>
-        <option value="">Brzil</option>
-        <option value=""></option>
-    </select>
+      <select name="" id="">
+        <option value="">Select a city....</option>
+        <option value="">Seul</option>
+        <option value="">São Paulo</option>
+        <option value="">Paris</option>
+        <option value="">Dubai</option>
+      </select>
 
-    <div class="city">
-        <h2>Lisbon</h2>
-        <div class="date"> 23 august 2023</div>
-        <div class="time"> 1:01:11</div>
+      <div class="city">
+        <div>
+          <h2>Lisbon</h2>
+          <div class="date">23 august 2023</div>
+        </div>
+        <div class="time">1:01:11 <small>AM</small></div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>Lisbon</h2>
+          <div class="date">23 august 2023</div>
+        </div>
+        <div class="time">1:01:11 <small>AM</small></div>
+      </div>
     </div>
-        <div class="city">
-        <h2>Lisbon</h2>
-        <div class="date"> 23 august 2023</div>
-        <div class="time"> 1:01:11</div>
-    </div>
-</div>
     <footer>
       This project was coded with 💜 by Eva Sousa and is
       <a
