added the funcionality for the select
add an id in html
in javascript- when change the select, receibe and clean the timezone
selct the city with the current time and date

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select name="" id="">
+      <select name="" id="city">
         <option value="">Select a city....</option>
-        <option value="">Seul</option>
-        <option value="">São Paulo</option>
-        <option value="">Paris</option>
-        <option value="">Dubai</option>
+        <option value="Asia/Seoul">Seoul</option>
+        <option value="US/Hawaii">Hawai</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="Asia/Dubai">Dubai</option>
       </select>
 
        <div id="cities">
