--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       </div>
     </div>
     <footer>
-      This project was coded with 💜 by Eva Sousa and is
+      This project was coded with 💜 by Eva Sousa and is open sourced on
       <a
         href="https://github.com/evasousa23/Project-world-clock"
         target="_blank"
       >
-        open sourced on GitHub</a
+        GitHub</a
       >
     </footer>
 
