added the current location

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
       <select name="" id="city">
         <option value="">Select a city....</option>
+        <option value="current"> Current location</option>
         <option value="Asia/Seoul">Seoul</option>
         <option value="US/Hawaii">Hawai</option>
         <option value="Europe/Paris">Paris</option>
